@@ -56,6 +56,20 @@ script.on_event(defines.events.on_chunk_generated,
   end
 )
 
+-- workaround for force restrictions with the standard decon planner
+script.on_event(defines.events.on_player_deconstructed_area, function(event)
+  local cursor_stack = game.get_player(event.player_index).cursor_stack
+  local item = nil
+  if cursor_stack and cursor_stack.valid_for_read and (cursor_stack.name == event.item) then
+    item = cursor_stack
+  end
+  if not event.alt then
+    event.surface.deconstruct_area{area= event.area, force= "neutral", player = event.player_index, item = item}
+  else
+    event.surface.cancel_deconstruct_area{area= event.area, force= "neutral", player = event.player_index, item = item}
+  end
+end)
+
 remote.add_interface("AbandonedRuins",
 {
   set_spawn_ruins = function(spawn_ruins)
